syntax = "proto3";
// sys_dept 部门
package dept;
option go_package = "cloud/service/sys/dept;dept";
import "google/protobuf/timestamp.proto";
import "pagination.proto";

// SysDeptObject 数据对象
message SysDeptObject {
	// @inject_tag: gorm:"primaryKey;autoIncrement;column:id" json:"id"
	optional int64 id = 1; //编号
	// @inject_tag: gorm:"column:name" json:"name"
	optional string name = 2; //名称
	// @inject_tag: gorm:"column:parent_id" json:"parentId"
	optional int64 parent_id = 3; //上级
	// @inject_tag: gorm:"column:sort" json:"sort"
	optional int32 sort = 4; //排序
	// @inject_tag: gorm:"column:user_id" json:"userId"
	optional int64 user_id = 5; //负责人
	// @inject_tag: gorm:"column:phone" json:"phone"
	optional string phone = 6; //联系电话
	// @inject_tag: gorm:"column:email" json:"email"
	optional string email = 7; //邮件
	// @inject_tag: gorm:"column:status" json:"status"
	optional int32 status = 8; //状态:0正常/1停用
	// @inject_tag: gorm:"column:deleted" json:"deleted"
	optional int32 deleted = 9; //删除:0否/1是
	// @inject_tag: gorm:"column:tenant_id" json:"tenantId"
	optional int64 tenant_id = 10; //租户
	// @inject_tag: gorm:"column:creator" json:"creator"
	optional string creator = 11; //创建人
	// @inject_tag: gorm:"column:create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 12; //创建时间
	// @inject_tag: gorm:"column:updater" json:"updater"
	optional string updater = 13; //更新人
	// @inject_tag: gorm:"column:update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 14; //更新时间
}
// SysDeptTotalResponse 列表数据总量
message SysDeptTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SysDeptCreateRequest 创建数据请求
message SysDeptCreateRequest {
	SysDeptObject data = 1;
}
// SysDeptCreateResponse 创建数据响应
message SysDeptCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SysDeptUpdateRequest 更新数据请求
message SysDeptUpdateRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
	SysDeptObject data = 2;
}
// SysDeptUpdateResponse 更新数据响应
message SysDeptUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// SysDeptDeleteRequest 删除数据请求
message SysDeptDeleteRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysDeptDeleteResponse 删除数据响应
message SysDeptDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SysDeptRequest 查询单条数据请求
message SysDeptRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysDeptResponse 查询单条数据响应
message SysDeptResponse {
	int64 code = 1;
	string msg = 2;
	SysDeptObject data = 3;
}
// SysDeptRecoverRequest 恢复数据请求
message SysDeptRecoverRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysDeptRecoverResponse 删除数据响应
message SysDeptRecoverResponse {
	int64 code = 1;
	string msg = 2;
}
// SysDeptDropRequest 清理数据请求
message SysDeptDropRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysDeptDropResponse 清理数据响应
message SysDeptDropResponse {
	int64 code = 1;
	string msg = 2;
}
// SysDeptListRequest 列表数据
message SysDeptListRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除:0否/1是
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 3; // 状态:0正常/1停用
	// @inject_tag: db:"parent_id" json:"parentId"
	optional int64 parent_id = 4; // 上级
	// @inject_tag: db:"name" json:"name"
	optional string name = 5; // 名称

	// @inject_tag: json:"pagination"
	optional pagination.PaginationRequest pagination = 6; // 分页
}

// SysDeptListResponse 数据响应
message SysDeptListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SysDeptObject data = 3;
}
// SysDeptListTotalRequest 列表数据
message SysDeptListTotalRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除:0否/1是
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 3; // 状态:0正常/1停用
	// @inject_tag: db:"parent_id" json:"parentId"
	optional int64 parent_id = 4; // 上级
	// @inject_tag: db:"name" json:"name"
	optional string name = 5; // 名称

}


// SysDeptService 服务
service SysDeptService{
	rpc SysDeptCreate(SysDeptCreateRequest) returns (SysDeptCreateResponse);
	rpc SysDeptUpdate(SysDeptUpdateRequest) returns (SysDeptUpdateResponse);
	rpc SysDeptDelete(SysDeptDeleteRequest) returns (SysDeptDeleteResponse);
	rpc SysDept(SysDeptRequest) returns (SysDeptResponse);
	rpc SysDeptRecover(SysDeptRecoverRequest) returns (SysDeptRecoverResponse);
	rpc SysDeptDrop(SysDeptDropRequest) returns (SysDeptDropResponse);
	rpc SysDeptList(SysDeptListRequest) returns (SysDeptListResponse);
	rpc SysDeptListTotal(SysDeptListTotalRequest) returns (SysDeptTotalResponse);
}